--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <i class="fab fa-linkedin"></i>
                     <div>
                         <h4>LinkedIn</h4>
-                        <p><a href="https://www.linkedin.com/in/dumith-lusena-866802350/" target="_blank">linkedin.com/in/dumith-lusena</a></p>
+                        <p><a href="https://www.linkedin.com/in/dumith-lusena/" target="_blank">linkedin.com/in/dumith-lusena</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
