--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-image">
-                <img src="assets/Profile.jpg" alt="Dumith Lusena" id="profileImage">
+                <img src="assets/New Profile.jpeg" alt="Dumith Lusena" id="profileImage">
             </div>
             <h1>Hi , I'm Dumith Lusena</h1>
             <p class="subtitle">Full Stack Developer</p>
@@ -416,7 +416,7 @@
     <script type="text/javascript">
         (function () {
             emailjs.init({
-                publicKey: "9xVO9t_mwBHdoouux",
+                publicKey: "bLXqOo21rADBZ1xn4",
             });
         })();
     </script>
